--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,6 +23,12 @@
         <div class="bg-neutral-200 rounded-xl">
             <input id="colorPicker" type="color" class="w-full" value="#ffffff"/>
         </div>
+
+        <div class="bg-neutral-200 rounded-xl">
+            <label for="brightness-range" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Brightness</label>
+            <input id="brightness-range" type="range" value="0.5" min="0" max="1" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700">
+        </div>
+
     </div>
 
 </body>
