--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,20 +13,21 @@
     <div id="message-container" class="absolute top-1 w-full"></div> 
 
     <div class="m-auto mt-2 rounded-xl flex flex-col gap-3 lg:w-[500px] w-full bg-neutral-100 p-3">
-        <span class="text-xl">
+        <span class="text-xl flex-1 text-center">
             <span class="text-red-500 m-0 p-0">R</span><span class="text-green-500 m-0 p-0">G</span><span class="text-blue-500 m-0 p-0">B</span>-Christmas-Tree-WebUI
         </span>
-        <div class="bg-neutral-200 rounded-xl flex flex-col gap-2">
-            <button class="p-3" onclick="turnOn()">Turn on</>
-            <button class="p-3" onclick="turnOff()">Turn off</>
+        <div class="bg-neutral-200 rounded-xl flex">
+            <button class="p-3 m-1 flex-1 bg-lime-300 rounded-xl" onclick="turnOn()">Turn on</button>
+            <button class="p-3 m-1 flex-1 bg-sky-300 rounded-xl" onclick="turnOff()">Turn off</button>
         </div>
-        <div class="bg-neutral-200 rounded-xl">
+        <div class="bg-neutral-200 rounded-xl p-2">
+            <label for="bcolorPicker" class="block mb-2 text-sm font-medium text-gray-900">Color</label>
             <input id="colorPicker" type="color" class="w-full" value="#ffffff"/>
         </div>
 
-        <div class="bg-neutral-200 rounded-xl">
-            <label for="brightness-range" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Brightness</label>
-            <input id="brightness-range" type="range" value="0.5" min="0" max="1" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700">
+        <div class="bg-neutral-200 rounded-xl p-2">
+            <label for="brightness-range" class="block mb-2 text-sm font-medium text-gray-900">Brightness</label>
+            <input id="brightness-range" type="range" value="0.5" min="0" max="1" step="0.01" class="w-full h-2 bg-neutral-300 rounded-xl appearance-none cursor-pointer">
         </div>
 
     </div>
