--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -40,6 +40,14 @@
                 class="w-full h-2 bg-neutral-300 rounded-xl appearance-none cursor-pointer">
         </div>
 
+        <div class="bg-neutral-200 rounded-xl flex-col p-2">
+            <label class="block mb-2 text-sm font-medium text-gray-900">Effects</label>
+            <div class="flex">
+                <button class="p-3 m-1 bg-neutral-600 text-white rounded-xl" onclick="setEffect('none')">No effect</button>
+                <button class="p-3 m-1 bg-amber-500 rounded-xl" onclick="setEffect('candle')">Candle lights</button>
+            </div>
+        </div>
+
     </div>
 
 </body>
