--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,14 +23,19 @@
             <button class="p-3 m-1 flex-1 bg-lime-300 rounded-xl" onclick="turnOn()">Turn on</button>
             <button class="p-3 m-1 flex-1 bg-sky-300 rounded-xl" onclick="turnOff()">Turn off</button>
         </div>
-        <div class="bg-neutral-200 rounded-xl p-2">
+        <div class="bg-neutral-200 rounded-xl p-2 flex flex-col gap-2">
             <label for="bcolorPicker" class="block mb-2 text-sm font-medium text-gray-900">Color</label>
-            <input id="colorPicker" type="color" class="w-full" value="#ffffff" />
-            <div class="flex gap-1">
-                <div id="savedColorHolder">
+            <div class="flex gap-2">
+                <input id="colorPicker" type="color" class="w-full" value="#ffffff" />
+                <button class="px-2 rounded-full bg-neutral-400" onclick="reapplyColor()">OK</button>
+            </div>
+            <div class="flex flex-col gap-3">
+                <div id="savedColorHolder" class="flex gap-2">
                 </div>
-                <button class="px-2 rounded-full bg-blue-500" onclick="saveColor()">+</button>
-                <button class="px-2 rounded-full bg-red-500" onclick="removeColor()">-</button>
+                <div>
+                    <button class="py-1 px-3 rounded-xl text-white bg-blue-500" onclick="saveColor()">+</button>
+                    <button class="py-1 px-3 rounded-xl bg-red-500" onclick="removeColor()">-</button>
+                </div>
             </div>
         </div>
 
