--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -49,6 +49,7 @@
             <label class="block mb-2 text-sm font-medium text-gray-900">Effects</label>
             <div class="flex">
                 <button class="p-3 m-1 bg-neutral-600 text-white rounded-xl" onclick="setEffect('none')">No effect</button>
+                <button class="p-3 m-1 bg-blue-300 rounded-xl" onclick="setEffect('breathe')">Breathe</button>
                 <button class="p-3 m-1 bg-amber-500 rounded-xl" onclick="setEffect('candle')">Candle lights</button>
             </div>
         </div>
