--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -51,6 +51,7 @@
                 <button class="p-3 m-1 bg-neutral-600 text-white rounded-xl" onclick="setEffect('none')">No effect</button>
                 <button class="p-3 m-1 bg-blue-300 rounded-xl" onclick="setEffect('breathe')">Breathe</button>
                 <button class="p-3 m-1 bg-amber-500 rounded-xl" onclick="setEffect('candle')">Candle lights</button>
+                <button class="p-3 m-1 bg-pink-500 rounded-xl" onclick="setEffect('party')">Party</button>
             </div>
         </div>
 
