Add speed parameter

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -55,6 +55,12 @@
             </div>
         </div>
 
+        <div id="party-parameters" class="bg-neutral-200 rounded-xl p-2 bg-pink-300">
+            <label for="party-speed-range" class="block mb-2 text-sm font-medium text-gray-900">Speed</label>
+            <input id="party-speed-range" type="range" value="1" min="0" max="10" step="0.05"
+                class="w-full h-2 bg-pink-500 accent-pink-800 rounded-xl appearance-none cursor-pointer">
+        </div>
+
     </div>
 
 </body>
