--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -55,10 +55,43 @@
             </div>
         </div>
 
-        <div id="party-parameters" class="bg-neutral-200 rounded-xl p-2 bg-pink-300">
-            <label for="party-speed-range" class="block mb-2 text-sm font-medium text-gray-900">Speed</label>
-            <input id="party-speed-range" type="range" value="1" min="0" max="5" step="0.05"
-                class="w-full h-2 bg-pink-500 accent-pink-800 rounded-xl appearance-none cursor-pointer">
+        <div id="breathe-parameters" style="display: none;" class="flex-col gap-2">
+            <div class="bg-neutral-200 rounded-xl p-2 bg-blue-300">
+                <label for="breathe-min-range" class="block mb-2 text-sm font-medium text-gray-900">Minimal brightness</label>
+                <input id="breathe-min-range" type="range" value="0.2" min="0" max="1" step="0.05"
+                    class="w-full h-2 bg-blue-500 accent-blue-800 rounded-xl appearance-none cursor-pointer">
+            </div>
+            <div class="bg-neutral-200 rounded-xl p-2 bg-blue-300">
+                <label for="breathe-max-range" class="block mb-2 text-sm font-medium text-gray-900">Maximal brightness</label>
+                <input id="breathe-max-range" type="range" value="0.6" min="0" max="1" step="0.05"
+                    class="w-full h-2 bg-blue-500 accent-blue-800 rounded-xl appearance-none cursor-pointer">
+            </div>
+            <div class="bg-neutral-200 rounded-xl p-2 bg-blue-300">
+                <label for="breathe-frequency-range" class="block mb-2 text-sm font-medium text-gray-900">Frequency</label>
+                <input id="breathe-frequency-range" type="range" value="2" min="0.1" max="5" step="0.05"
+                    class="w-full h-2 bg-blue-500 accent-blue-800 rounded-xl appearance-none cursor-pointer">
+            </div>
+        </div>
+
+        <div id="candle-parameters" style="display: none;" class="flex-col gap-2">
+            <div class="bg-neutral-200 rounded-xl p-2 bg-amber-300">
+                <label for="candle-factor-range" class="block mb-2 text-sm font-medium text-gray-900">Factor</label>
+                <input id="candle-factor-range" type="range" value="1" min="0" max="5" step="0.05"
+                    class="w-full h-2 bg-amber-500 accent-amber-800 rounded-xl appearance-none cursor-pointer">
+            </div>
+            <div class="bg-neutral-200 rounded-xl p-2 bg-amber-300">
+                <label for="candle-windiness-range" class="block mb-2 text-sm font-medium text-gray-900">Windiness</label>
+                <input id="candle-windiness-range" type="range" value="1" min="0" max="5" step="0.05"
+                    class="w-full h-2 bg-amber-500 accent-amber-800 rounded-xl appearance-none cursor-pointer">
+            </div>
+        </div>
+
+        <div id="party-parameters" style="display: none;" class="flex-col gap-2">
+            <div class="bg-neutral-200 rounded-xl p-2 bg-pink-300">
+                <label for="party-speed-range" class="block mb-2 text-sm font-medium text-gray-900">Speed</label>
+                <input id="party-speed-range" type="range" value="1" min="0" max="5" step="0.05"
+                    class="w-full h-2 bg-pink-500 accent-pink-800 rounded-xl appearance-none cursor-pointer">
+            </div>
         </div>
 
     </div>
