--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="p-0 m-0 relative">
-    <div id="overlay" style="display: none;" class="absolute top-0 w-full h-screen flex justify-center items-center bg-gray-400 opacity-30">
+    <div id="overlay" style="display: none;" class="fixed top-0 w-full h-screen flex justify-center items-center bg-gray-400 opacity-30">
             <svg class="animate-spin -ml-1 mr-3 h-14 w-14 text-black" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                 <circle class="opacity-25" cx="12" cy="12" r="50" stroke="currentColor" stroke-width="4"></circle>
                 <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
